--- a/.github/workflows/versions.yml
+++ b/.github/workflows/versions.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           go-version: '^1.14.6'
       - name: Setup Singularity
-        uses: ./.github/actions/setup-singularity
+        uses: ./
         with:
           singularity-version: ${{ matrix.sing }}
       - name: verify singularity
