--- a/.github/workflows/versions.yml
+++ b/.github/workflows/versions.yml
@@ -20,10 +20,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        sing: [3.6.1]
-        # os: [macos-latest, windows-latest, ubuntu-latest]
-        # sing: [1.12, 1.13, 1.14]
-
+        sing: [3.6.1, 3.5.3, 3.4.1]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
@@ -33,6 +30,8 @@ jobs:
         uses: ./
         with:
           singularity-version: ${{ matrix.sing }}
-      - name: verify singularity
+      - name: Verify singularity
         run: __tests__/verify-sing.sh ${{ matrix.sing }}
         shell: bash
+      - name: Run a singularity container
+        run: singularity run docker://alpine cat /etc/os-release
