--- a/.github/workflows/versions.yml
+++ b/.github/workflows/versions.yml
@@ -23,6 +23,9 @@ jobs:
         sing: [3.6.1, 3.5.3, 3.4.1]
     steps:
       - uses: actions/checkout@v2
+      - name: OS deps
+      # Required for sing<3.6
+        run: sudo apt install uuid-dev
       - uses: actions/setup-go@v2
         with:
           go-version: '^1.14.6'
