--- a/.github/workflows/versions.yml
+++ b/.github/workflows/versions.yml
@@ -23,12 +23,6 @@ jobs:
         sing: [3.6.1, 3.5.3]
     steps:
       - uses: actions/checkout@v2
-      - name: OS deps
-      # Required for sing<3.6
-        run: sudo apt install uuid-dev
-      - uses: actions/setup-go@v2
-        with:
-          go-version: '^1.14.6'
       - name: Setup Singularity
         uses: ./
         with:
@@ -38,3 +32,4 @@ jobs:
         shell: bash
       - name: Run a singularity container
         run: singularity run docker://alpine cat /etc/os-release
+  # TODO add job for testing local build
