--- a/.github/workflows/versions.yml
+++ b/.github/workflows/versions.yml
@@ -31,7 +31,8 @@ jobs:
         run: __tests__/verify-sing.sh ${{ matrix.sing }}
         shell: bash
       - name: Debug
-        run: ls -lR $SINGULARITY_ROOT
+        run: |
+          stat $SINGULARITY_ROOT/libexec/singularity/bin/starter-suid
       - name: Run a singularity container
         run: singularity run docker://alpine cat /etc/os-release
   # TODO add job for testing local build
