--- a/.github/workflows/versions.yml
+++ b/.github/workflows/versions.yml
@@ -23,6 +23,8 @@ jobs:
         sing: [3.6.1, 3.5.3, 3.6.0]
     steps:
       - uses: actions/checkout@v2
+      - name: Why
+        run: npm list
       - name: Setup Singularity
         uses: ./
         with:
