--- a/.github/workflows/versions.yml
+++ b/.github/workflows/versions.yml
@@ -10,7 +10,7 @@ on:
     paths-ignore:
       - '**.md'
   schedule:
-    - cron: 0 0 * * *
+    - cron: 0 0 1 * * # Runs at 00:00 UTC on the 1st of every month.
 
 jobs:
   setup-versions:
@@ -20,7 +20,13 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04]
-        sing: [3.6.1, 3.5.3, 3.6.0]
+        sing:
+          - 3.5.3, # pre-build
+          - 3.6.1, # pre-build 
+          - 3.6.4, # pre-build
+          - 3.7.1, # pre-build
+          - 3.8.0, # from source
+          - 3.8.3 # pre-build
     steps:
       - uses: actions/checkout@v2
       - name: Setup Singularity
