--- a/.github/workflows/versions.yml
+++ b/.github/workflows/versions.yml
@@ -11,6 +11,7 @@ on:
       - '**.md'
   schedule:
     - cron: 0 0 1 * * # Runs at 00:00 UTC on the 1st of every month.
+  workflow_dispatch:
 
 jobs:
   setup-versions:
