--- a/.github/workflows/versions.yml
+++ b/.github/workflows/versions.yml
@@ -22,9 +22,9 @@ jobs:
       matrix:
         os: [ubuntu-20.04]
         sing:
-          # - 3.5.3 # pre-build
-          # - 3.6.1 # pre-build
-          # - 3.6.4 # pre-build
+          - 3.5.3 # pre-build
+          - 3.6.1 # pre-build
+          - 3.6.4 # pre-build
           - 3.7.1 # pre-build
           - 3.8.0 # from source
           - 3.8.3 # pre-build
