--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@actions/core": "^1.2.6",
     "@actions/github": "^4.0.0",
     "@actions/io": "^1.0.2",
-    "@actions/tool-cache": "^1.6.0"
+    "@actions/tool-cache": "^1.6.0",
+    "semver": "^7.3.5"
   },
   "devDependencies": {
+    "@types/semver": "^7.3.8",
     "@zeit/ncc": "^0.22.3",
     "prettier": "^2.0.5",
     "typescript": "^3.9.7"
